web/book/tests/snapshots/snapshot__tests__prql__syntax__expressions-and-operators-2.prql.snap
---
source: web/book/tests/snapshot.rs
expression: "# error\n\nfrom employees\nderive total_distance = sum distance # generates the error shown below\nderive other_distance = (sum distance) # works as expected\n"
---
Error:
   ╭─[:4:29]
   │
 4 │ derive total_distance = sum distance # generates the error shown below
   │                             ────┬───
   │                                 ╰───── Unknown name distance
───╯

